--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.15.0",
     "axios": "^0.27.2",
-    "bootstrap": "^5.0.0",
+    "bootstrap": "^4.3.1",
     "bootstrap-icons": "^1.8.1",
     "drei": "^2.2.21",
     "emailjs": "^4.0.3",
     "framer-motion": "^6.2.10",
     "gh-pages": "^2.2.0",
+    "popper.js": "^1.15.0",
+    "lightbox2": "^2.11.0",
     "jquery": "^3.6.4",
     "node-sass": "^9.0.0",
     "portfolio-project": "^2.0.3",
@@ -27,7 +29,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.9.0",
-    "react-typed": "^1.1.2",
+    "react-typed": "^2.0.12",
     "resolve-url-loader": "^5.0.0",
     "typed.js": "^2.0.10",
     "web-vitals": "^2.1.4",
